# ncspot-rpc

./: README.md  pyproject.toml
docs/: CUSTOM_CLIENT.md  SETTING_CONFIG.md  TECH_OVERVIEW.md
src/: config.toml  main.py
src/core/: config.py  logs.py  models.py  rpc.py  socket.py
