[project]
name = "ncspot-rpc"
version = "1.0.0"
description = "Discord Rich Presence adapter for ncspot"
requires-python = ">=3.10"
dependencies = [
    "pypresence",
    "colorama",
    "pydantic",
    "inotify",
]

[project.scripts]
ncspot-discord = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["config.toml"]
