[project]
name = "ncspot-rpc"
version = "1.0.1"
description = "Discord Rich Presence adapter for ncspot"
readme = "README.md"
license = { file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "pypresence",
    "colorama",
    "pydantic",
    "inotify",
]

[project.scripts]
ncspot-discord = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["config.toml"]

[project.urls]
Homepage = "https://github.com/linuxlarp/ncspot-rpc"
Repository = "https://github.com/linuxlarp/ncspot-rpc"
Issues = "https://github.com/linuxlarp/ncspot-rpc/issues"
