[project]
name = "ncspot-rpc"
version = "1.0.4"
description = "Discord Rich Presence adapter for ncspot"
readme = "README.md"
license = { file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pypresence",
    "colorama",
    "pydantic",
    "inotify",
]

[project.scripts]
ncspot-rpc = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["config.toml"]

[project.urls]
Homepage = "https://github.com/linuxlarp/ncspot-rpc"
Repository = "https://github.com/linuxlarp/ncspot-rpc"
Issues = "https://github.com/linuxlarp/ncspot-rpc/issues"
